--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Technicat LLC
-description: Las Vegas, Nevada
-show_downloads: false
+title: HyperBowl
+description: Be the ball!
+show_downloads: true
 logo: /images/dakotasnow/CatGraphic300x300.jpg
