--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ title: HyperBowl
 description: Be the ball!
 show_downloads: true
 logo: /images/dakotasnow/CatGraphic300x300.jpg
+appstore: https://apps.apple.com/us/app/hyperbowl/id344209253
+steam: https://store.steampowered.com/app/847530/HyperBowl/
+games: https://technicat.itch.io/hyperbowl
+vimeo: https://vimeo.com/showcase/9418250
