--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ logo: /images/dakotasnow/CatGraphic300x300.jpg
 appstore: https://apps.apple.com/us/app/hyperbowl/id344209253
 steam: https://store.steampowered.com/app/847530/HyperBowl/
 vimeo: https://vimeo.com/showcase/9418250
+games: https://technicat.itch.io/hyperbowl
