--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ logo: /images/dakotasnow/CatGraphic300x300.jpg
 appstore: https://apps.apple.com/us/app/hyperbowl/id344209253
 steam: https://store.steampowered.com/app/847530/HyperBowl/
 vimeo: https://vimeo.com/showcase/9418250
-privacy: HyperBowl does not collect data outside of Apple analytics, the Steam SDK, and the Unity game engine.
+privacy: This game does not collect any data outside of the Steam SDK and Unity game engine
