--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 title: HyperBowl
 description: Be the ball!
 show_downloads: true
-logo: /images/dakotasnow/CatGraphic300x300.jpg
+logo: /images/icons/cat/catglasses.svg
 appstore: https://apps.apple.com/us/app/hyperbowl/id344209253
 steam: https://store.steampowered.com/app/847530/HyperBowl/
 privacy: This game does not collect any data outside of the Steam SDK and Unity game engine
