--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ logo: /images/icons/cat/catglasses.svg
 appstore: https://apps.apple.com/us/app/hyperbowl/id344209253
 steam: https://store.steampowered.com/app/847530/HyperBowl/
 privacy: This game does not collect any data outside of the Steam SDK and Unity game engine
+domain: hyperbowl3d.com
+copyright: Technicat LLC
